--- a/faculty.html
+++ b/faculty.html
@@ -185,7 +185,7 @@
           </div>
           <div class='faculty-card'>
             <h3 class='faculty-name'>
-              NATALIE YOLAN
+              NATALIE YALON
             </h3>
             <img class='faculty-img' src='assets/images/yolan.jpeg' />
             Artistic director of Michael Chekhov Studio Brussels. Natalie specialized in stage
