--- a/faculty.html
+++ b/faculty.html
@@ -192,7 +192,7 @@
             production and Russian theatrical pedagogics in Russia at Moscow’s Gitis (the Russian
             Academy of Theatre Arts) and the Vakhtanghov Institute; with teachers Vladimir Skoritz,
             Andrei Droznin, Boris Rabey, and Slava Kokorin.  She also followed an intensive training
-            programme at the Michael Chekhov Acting Studio in New York with Lenard Petit. Since 2003,
+            at the Michael Chekhov Acting Studio in New York with Lenard Petit. Since 2003,
             she has given courses in Italy, Belgium, France and the United States. She teaches at the
             Conservatoire de Liège and at the Conservatoire de Roubaix, France, at the Samovar in Paris
             and at the Michael Chekhov Acting Studio in New York.  She also works as a consultant for the
