revised Lenard's bio by Emma

--- a/lenard.html
+++ b/lenard.html
@@ -39,28 +39,25 @@
         <section>
           <img class='image-float' src='assets/images/lenard.jpeg' />
           <div>
-            Lenard Petit is one of a handful of teacher students trained
-            by the original members of Michael Chekhov’s Theater School.
-            He is a founding member of the Michael Chekhov Association,
-            MICHA, and the Director of the Michael Chekhov Acting Studio
-            in New York City since it’s inception in 1996. Author of the
-            <em>Michael Chekhov Handbook, for the Actor</em>, he has been working
-            in the theater for forty years collaborating with other
-            artists to create original works for the stage, cinema, and
-            television. He has directed plays and performance pieces on
-            and Off Broadway, and in Great Britain. As an actor, he has
-            performed in works by Julie Taymor, Meredith Monk, Richard
-            Foreman, Ping Chong, and many others. In 2016, Mr. Petit was
-            invited to create a Michael Chekhov Workshop and Festival in
-            connection with the Shanghai Theater Academy in Shanghai
-            China. He has been invited to teach Master classes at the
-            International School for Film and Television in Munich,
-            Helsinki University, as well as master classes in, Amsterdam,
-            Rome, Lisbon, Madrid, Berlin, Oslo, Reykjavik, Brussels, Zurich,
-            Dublin, London, Riga, Vilnius, and Irkutsk, Siberia. For
-            twenty-five years he taught the Chekhov Technique in the MFA
-            and BFA Acting programs at Mason Gross School of the Arts at
-            Rutgers University.
+            Lenard Petit is one of a handful of teachers trained by the
+            original members of Michael Chekhov’s Theater School. He is 
+            a founding member of the Michael Chekhov Association, MICHA, 
+            and the Director of the Michael Chekhov Acting Studio in New 
+            York City since its inception in 1996. Author of <em>Michael 
+            Chekhov Handbook, for the Actor</em>, he has been working in the 
+            theater for forty years collaborating with other artists to 
+            create original works for stage, film and television. He has 
+            directed plays and performance pieces on and off Broadway and 
+            in Great Britain. As an actor, he has performed in works by 
+            Julie Taymor, Meredith Monk, Richard Foreman, Ping Chong, and 
+            many others. In 2016 Mr. Petit was invited to create a Michael 
+            Chekhov Workshop and Festival in connection with the Shanghai 
+            Theater Academy in Shanghai, China. He has been invited to teach 
+            Master Classes in Munich, Helsinki, Amsterdam, Rome, Lisbon, Madrid, 
+            Berlin, Oslo, Reykjavik, Brussels, Rio de Janeiro, Zurich, Dublin, 
+            London, Riga, Vilnius, and Irkutsk, Siberia. For twenty-five years 
+            he taught the Chekhov Technique in the MFA and BFA Acting programs 
+            at Mason Gross School of the Arts at Rutgers University.
           </div>
         </section>
 
