fix page section width issue

--- a/studio.html
+++ b/studio.html
@@ -37,7 +37,7 @@
           on Michael Chekhov Technique and exploring the actor's work as
           play since 1996.</h2>
 
-        <section class='page-section video-grid'>
+        <section class='wide-page-section video-grid'>
           <iframe class='studio-video' width="420" height="235" src="https://www.youtube.com/embed/FvyWGmb1wCQ?rel=0" frameborder="0" allowfullscreen></iframe>
           <div class='studio-video-text'>
             Lenard Petit, Artistic Director, has developed the work of Michael Chekhov
@@ -71,7 +71,7 @@
           </li>
         </nav>
 
-        <section class='page-section'>
+        <section class='wide-page-section'>
           <h3 class='section-header'>TESTIMONIALS</h3>
           <p>
             <em class='studio-quote'>
