Book Link update

--- a/studio.html
+++ b/studio.html
@@ -43,10 +43,10 @@
             Lenard Petit, Artistic Director, has developed the work of Michael Chekhov
             in a practical and imaginative way. His teaching and writings are celebrated
             for clearly translating the technique into something easy to use for actors today.
-            His book, <em>The Michael Chekhov Handbook, for the Actor</em> can be purchased
-            <a class='studio-link' target='_blank' href='http://www.dramabookshop.com/book/9780415496728'>here</a>.
+            His book, <a class='studio-link' target='_blank' href='http://www.dramabookshop.com/book/9780415496728'><em>The Michael Chekhov Handbook, For The Actor</em></a>
+            can be purchased online and at The Drama Book Shop.
             Additionally a few <a class='studio-link' target='_blank' href='assets/articles.pdf'>articles</a>
-            by Lenard are included here for you–gratis!
+            by Lenard are included here!
           </div>
         </section>
 
