add seo features

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Michael Chekhov Acting Studio</title>
+    <meta name="title" content="Contact - Michael Chekhov Acting Studio | NYC">
+    <meta name="description" content="Contact the Michael Checkhov Acting Studio in New York City directed by Lenard Petit">
+    <meta name="author" content="Lenard Petit">
+    <meta property="og:title" content="Contact - Michael Chekhov Acting Studio | NYC">
+    <meta property="og:description" content="Contact the Michael Checkhov Acting Studio in New York City directed by Lenard Petit">
+    <title>Contact - Michael Chekhov Acting Studio | NYC</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 
@@ -86,7 +91,7 @@
             </section>
           </div>
           <div class='contact-grid-image'>
-            <img class='contact-image' src='assets/images/blake1.jpg' />
+            <img class='contact-image' alt='piece-by-william-blake' src='assets/images/blake1.jpg' />
             <div class='contact-image-source'>William Blake</div>
           </div>
         </div>
