--- a/faculty.html
+++ b/faculty.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Michael Chekhov Acting Studio</title>
+    <meta name="title" content="Faculty - Michael Chekhov Acting Studio | NYC">
+    <meta name="description" content="Faculty of Michael Checkhov Acting Studio in New York City directed by Lenard Petit">
+    <meta name="author" content="Lenard Petit">
+    <meta property="og:title" content="Faculty - Michael Chekhov Acting Studio | NYC">
+    <meta property="og:description" content="Faculty of Michael Checkhov Acting Studio in New York City directed by Lenard Petit">
+    <title>Faculty - Michael Chekhov Acting Studio | NYC</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 
@@ -32,14 +37,14 @@
 
     <div id="primary" class="content-area">
       <div class='page-body'>
-        <h2 class='page-title'>FACULTY</h2>
+        <h1 class='page-title'>FACULTY</h1>
 
         <section class='faculty-grid'>
           <div class='faculty-card'>
             <h3 class='faculty-name'>
               DAWN ARNOLD
             </h3>
-            <img class='faculty-img' src='assets/images/arnold.jpeg' />
+            <img class='faculty-img' alt='' src='assets/images/arnold.jpeg' />
             Founder and Artistic Director of The Moving Dock Theatre Company
             and Chekhov Studio Chicago. Dawn is a teacher of the Chekhov Technique,
             trained by the Michael Chekhov Association (MICHA). She appears in the
@@ -62,7 +67,7 @@
             <h3 class='faculty-name'>
               AKIL APOLLO DAVIS
             </h3>
-            <img class='faculty-img' src='assets/images/akil.jpg' />
+            <img class='faculty-img' alt='akil-apollo-davis' src='assets/images/akil.jpg' />
             Performing Artist and Theater Teacher based in NYC.
             Akil teaches and develops a rare form of masks and movement.
             The former apprentice and on-going collaborator of celebrated mask
@@ -77,9 +82,9 @@
           </div>
           <div class='faculty-card'>
             <h3 class='faculty-name'>
-              MELANIA  LEVITSKY
+              MELANIA LEVITSKY
             </h3>
-            <img class='faculty-img' src='assets/images/levitsky.jpg' />
+            <img class='faculty-img' alt='melania-levitsky' src='assets/images/levitsky.jpg' />
             Melania Levitsky is the Artistic Director of Nikita Productions,
             and the Associate Artistic Director of Walking the dog Theater Company
             Inc. She directs the Shakespeare in the Valley Festival every summer
@@ -98,7 +103,7 @@
             <h3 class='faculty-name'>
               JAMES LUSE
             </h3>
-            <img class='faculty-img' src='assets/images/luse.jpeg' />
+            <img class='faculty-img' alt='james-luse' src='assets/images/luse.jpeg' />
             Actor, director, and teacher based in CT. James has an MFA
             in Theatre Arts from Brandeis University and studied at the
             Michael Chekhov Acting Studio in NYC, The International Michael
@@ -127,7 +132,7 @@
             <h3 class='faculty-name'>
               SCOTT MILLER
             </h3>
-            <img class='faculty-img' src='assets/images/miller.jpeg' />
+            <img class='faculty-img' alt='scott-miller' src='assets/images/miller.jpeg' />
             Having spent forty years as a coach, trainer and teacher,
             Scott blends a lifetime of exceptional experience into his
             work with others. His diverse life paths include two sports
@@ -146,7 +151,7 @@
             <h3 class='faculty-name'>
               HUGO MOSS
             </h3>
-            <img class='faculty-img' src='assets/images/moss.jpeg' />
+            <img class='faculty-img' alt='hugo-moss' src='assets/images/moss.jpeg' />
             Born in the U.K. and half Irish, has lived in Brazil for nearly
             30 years. Recognizing how little Michael Chekhovs artistic legacy
             was known in Brazil, Michael Chekhov Brasil was founded in 2010
@@ -167,7 +172,7 @@
             <h3 class='faculty-name'>
               MEL SHRAWDER
             </h3>
-            <img class='faculty-img' src='assets/images/shrawder.jpeg' />
+            <img class='faculty-img' alt='mel-shrawder' src='assets/images/shrawder.jpeg' />
             Mel has performed with the New York Shakespeare Festival under
             the direction of Joseph Papp, and has appeared at Arena Stage in
             Washington DC, Portland Stage, and theatres around the world including
@@ -187,7 +192,7 @@
             <h3 class='faculty-name'>
               NATALIE YALON
             </h3>
-            <img class='faculty-img' src='assets/images/yolan.jpeg' />
+            <img class='faculty-img' alt='natalie-yalon' src='assets/images/yolan.jpeg' />
             Artistic director of Michael Chekhov Studio Brussels. Natalie specialized in stage
             production and Russian theatrical pedagogics in Russia at Moscow’s Gitis (the Russian
             Academy of Theatre Arts) and the Vakhtanghov Institute; with teachers Vladimir Skoritz,
