--- a/friends.html
+++ b/friends.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Michael Chekhov Acting Studio</title>
+    <meta name="title" content="Friends - Michael Chekhov Acting Studio | NYC">
+    <meta name="description" content="Friends of Michael Checkhov Acting Studio in New York City directed by Lenard Petit">
+    <meta name="author" content="Lenard Petit">
+    <meta property="og:title" content="Friends - Michael Chekhov Acting Studio | NYC">
+    <meta property="og:description" content="Friends of Michael Checkhov Acting Studio in New York City directed by Lenard Petit">
+    <title>Friends - Michael Chekhov Acting Studio | NYC</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 
@@ -35,7 +40,7 @@
 
     <div id="primary" class="content-area">
       <div class='page-body'>
-        <h2 class='page-title'>FRIENDS</h2>
+        <h1 class='page-title'>FRIENDS</h1>
         <div class='map-text'>
           Reach out to and follow our network of friends around the world!
         </div>
