--- a/lenard.html
+++ b/lenard.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Michael Chekhov Acting Studio</title>
+    <meta name="title" content="Lenard Petit - Michael Chekhov Acting Studio | NYC">
+    <meta name="description" content="Learn more about Lenard Petit, director of Michael Checkhov Acting Studio in New York City">
+    <meta name="author" content="Lenard Petit">
+    <meta property="og:title" content="Lenard Petit - Michael Chekhov Acting Studio | NYC">
+    <meta property="og:description" content="Learn more about Lenard Petit, director of Michael Checkhov Acting Studio in New York City">
+    <title>Lenard Petit - Michael Chekhov Acting Studio | NYC</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nothing+You+Could+Do" rel="stylesheet">
@@ -34,29 +39,29 @@
 
     <div id="primary" class="content-area">
       <div class='page-body'>
-        <h2 class='page-title'>LENARD PETIT</h2>
+        <h1 class='page-title'>LENARD PETIT</h1>
 
         <section>
-          <img class='image-float' src='assets/images/lenard.jpeg' />
+          <img class='image-float' alt='lenard-petit' src='assets/images/lenard.jpeg' />
           <div>
             Lenard Petit is one of a handful of teachers trained by the
-            original members of Michael Chekhov’s Theater School. He is 
-            a founding member of the Michael Chekhov Association, MICHA, 
-            and the Director of the Michael Chekhov Acting Studio in New 
-            York City since its inception in 1996. Author of <em>Michael 
-            Chekhov Handbook, for the Actor</em>, he has been working in the 
-            theater for forty years collaborating with other artists to 
-            create original works for stage, film and television. He has 
-            directed plays and performance pieces on and off Broadway and 
-            in Great Britain. As an actor, he has performed in works by 
-            Julie Taymor, Meredith Monk, Richard Foreman, Ping Chong, and 
-            many others. In 2016 Mr. Petit was invited to create a Michael 
-            Chekhov Workshop and Festival in connection with the Shanghai 
-            Theater Academy in Shanghai, China. He has been invited to teach 
-            Master Classes in Munich, Helsinki, Amsterdam, Rome, Lisbon, Madrid, 
-            Berlin, Oslo, Reykjavik, Brussels, Rio de Janeiro, Zurich, Dublin, 
-            London, Riga, Vilnius, and Irkutsk, Siberia. For twenty-five years 
-            he taught the Chekhov Technique in the MFA and BFA Acting programs 
+            original members of Michael Chekhov’s Theater School. He is
+            a founding member of the Michael Chekhov Association, MICHA,
+            and the Director of the Michael Chekhov Acting Studio in New
+            York City since its inception in 1996. Author of <em>Michael
+            Chekhov Handbook, for the Actor</em>, he has been working in the
+            theater for forty years collaborating with other artists to
+            create original works for stage, film and television. He has
+            directed plays and performance pieces on and off Broadway and
+            in Great Britain. As an actor, he has performed in works by
+            Julie Taymor, Meredith Monk, Richard Foreman, Ping Chong, and
+            many others. In 2016 Mr. Petit was invited to create a Michael
+            Chekhov Workshop and Festival in connection with the Shanghai
+            Theater Academy in Shanghai, China. He has been invited to teach
+            Master Classes in Munich, Helsinki, Amsterdam, Rome, Lisbon, Madrid,
+            Berlin, Oslo, Reykjavik, Brussels, Rio de Janeiro, Zurich, Dublin,
+            London, Riga, Vilnius, and Irkutsk, Siberia. For twenty-five years
+            he taught the Chekhov Technique in the MFA and BFA Acting programs
             at Mason Gross School of the Arts at Rutgers University.
           </div>
         </section>
@@ -75,7 +80,7 @@
             <div class='group lenard-attribution'>— Lenard Petit</div>
           </section>
           <section class='lenard-image-section'>
-            <img class='lenard-image' src='assets/images/blake1.jpg' />
+            <img class='lenard-image' alt='william-blake' src='assets/images/blake1.jpg' />
             <div class='lenard-image-source'>William Blake</div>
           </section>
         </section>
@@ -83,7 +88,7 @@
         <section class='lenard-chart-container'>
           <h3 class='section-header'>LENARD'S APPROACH</h3>
           <div class='lenard-chart'>
-            <img class='chart-image' src='assets/images/diagram.png' />
+            <img class='chart-image' alt='lenard-approach-chart' src='assets/images/diagram.png' />
             <div class='chart-explanation'>
               <ul class='chart-terms'>
                 <li class='chart-term'>ENERGY</li>
