--- a/philosophy.html
+++ b/philosophy.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Michael Chekhov Acting Studio</title>
+    <meta name="title" content="Philosophy - Michael Chekhov Acting Studio | NYC">
+    <meta name="description" content="Learn more about the philosophy and approach of Michael Checkhov Acting Studio in New York City directed by Lenard Petit">
+    <meta name="author" content="Lenard Petit">
+    <meta property="og:title" content="Philosophy - Michael Chekhov Acting Studio | NYC">
+    <meta property="og:description" content="Learn more about the philosophy and approach of Michael Checkhov Acting Studio in New York City directed by Lenard Petit">
+    <title>Philosophy - Michael Chekhov Acting Studio | NYC</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nothing+You+Could+Do" rel="stylesheet">
@@ -33,7 +38,7 @@
 
     <div id="primary" class="content-area">
       <div class='page-body'>
-        <h2 class='page-title'>PHILOSOPHY</h2>
+        <h1 class='page-title'>PHILOSOPHY</h1>
 
         <section class='page-section page-section-gray phil-intro-grid'>
           <div class='phil-intro-text'>
@@ -134,10 +139,10 @@
         </section>
 
         <section class='phil-image-grid'>
-          <img class='phil-img' src='assets/images/portrait1.jpeg' />
-          <img class='phil-img' src='assets/images/portrait2.jpg' />
-          <img class='phil-img' src='assets/images/portrait3.jpeg' />
-          <img class='phil-img' src='assets/images/portrait4.jpeg' />
+          <img class='phil-img' alt='constantine-stanislavsky' src='assets/images/portrait1.jpeg' />
+          <img class='phil-img' alt='michael-chekhov' src='assets/images/portrait2.jpg' />
+          <img class='phil-img' alt='yevgeny-vakhtangov' src='assets/images/portrait3.jpeg' />
+          <img class='phil-img' alt='vsevolod-meyerhold' src='assets/images/portrait4.jpeg' />
         </section>
 
         <section class='page-section page-section-clear'>
@@ -243,20 +248,22 @@
           </p>
         </section>
         <ul class='phil-grid'>
-          <img class='phil-img' src='assets/images/book1.jpeg' />
-          <img class='phil-img' src='assets/images/book2.jpeg' />
-          <img class='phil-img' src='assets/images/book3.jpeg' />
-          <img class='phil-img' src='assets/images/book4.jpeg' />
-          <img class='phil-img' src='assets/images/book5.jpg' />
-          <img class='phil-img' src='assets/images/book6.jpg' />
-          <img class='phil-img' src='assets/images/book7.jpg' />
-          <img class='phil-img' src='assets/images/book8.jpg' />
+          <img class='phil-img' alt='to-the-actor' src='assets/images/book1.jpeg' />
+          <img class='phil-img' alt='lessons-for-the-professional-actor' src='assets/images/book2.jpeg' />
+          <img class='phil-img' alt='on-the-technique-of-acting' src='assets/images/book3.jpeg' />
+          <img class='phil-img' alt='on-theatre-and-the-art-of-acting' src='assets/images/book4.jpeg' />
+          <img class='phil-img' alt='the-michael-chekhov-handbook-for-the-actor' src='assets/images/book5.jpg' />
+          <img class='phil-img' alt='auditioning-an-actor-friendly-guide' src='assets/images/book6.jpg' />
+          <img class='phil-img' alt='body-voice-imagination' src='assets/images/book7.jpg' />
+          <img class='phil-img' alt='the-path-of-the-actor' src='assets/images/book8.jpg' />
         </ul>
 
         <div class='phil-video-section'>
           <iframe class='phil-video' height='100%' width='100%' src="https://player.vimeo.com/video/19313780" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
           <div class='phil-video-attribution'>
-            <a href="https://vimeo.com/ondemand/michamasterclasses"><img class='phil-video-attribution-image' src='assets/images/micha.jpg' /></a>
+            <a href="https://vimeo.com/ondemand/michamasterclasses">
+              <img class='phil-video-attribution-image' alt='micha-michael-chekhov-association' src='assets/images/micha.jpg' />
+            </a>
             <div class='phil-video-description'>
               <a href="https://vimeo.com/ondemand/michamasterclasses">
                 Master Classes in the Michael Chekhov Technique by MICHA
