--- a/programs.html
+++ b/programs.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Michael Chekhov Acting Studio</title>
+    <meta name="title" content="Programs - Michael Chekhov Acting Studio | NYC">
+    <meta name="description" content="Programs offered by Michael Checkhov Acting Studio in New York City directed by Lenard Petit">
+    <meta name="author" content="Lenard Petit">
+    <meta property="og:title" content="Programs - Michael Chekhov Acting Studio | NYC">
+    <meta property="og:description" content="Programs offered by Michael Checkhov Acting Studio in New York City directed by Lenard Petit">
+    <title>Programs - Michael Chekhov Acting Studio | NYC</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
     <link rel='stylesheet' href='assets/master.css' />
@@ -32,11 +37,11 @@
 
     <div id="primary" class="content-area">
       <div class='page-body'>
-        <div class='page-title'>PROGRAMS</div>
+        <h1 class='page-title'>PROGRAMS</h1>
         <div class='programs-container'>
           <li class='program-card program-card-full-width'>
             <div class='program-card-title program-card-hidden'>ART OF THE ACTOR</div>
-            <img class='art-of-the-actor' src='assets/images/aota.jpg'></img>
+            <img class='art-of-the-actor' alt='art-of-the-actor-banner' src='assets/images/aota.jpg'></img>
           </li>
           <div class='programs-grid'>
             <li class='program-card gold'>
