--- a/studio.html
+++ b/studio.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Michael Chekhov Acting Studio</title>
+    <meta name="title" content="Studio - Michael Chekhov Acting Studio | NYC">
+    <meta name="description" content="Learn more about Michael Checkhov Acting Studio in New York City directed by Lenard Petit">
+    <meta name="author" content="Lenard Petit">
+    <meta property="og:title" content="Studio - Michael Chekhov Acting Studio | NYC">
+    <meta property="og:description" content="Learn more about Michael Checkhov Acting Studio in New York City directed by Lenard Petit">
+    <title>Studio - Michael Chekhov Acting Studio | NYC</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
     <link rel='stylesheet' href='assets/master.css' />
@@ -31,7 +36,7 @@
 
     <div id="primary" class="content-area">
       <div class='page-body'>
-        <h2 class='page-title'>STUDIO</h2>
+        <h1 class='page-title'>STUDIO</h1>
         <h2 class='studio-greeting'>Welcome to the Michael Chekhov Acting
           Studio in New York City, home to trainings and workshops based
           on Michael Chekhov Technique and exploring the actor's work as
@@ -54,19 +59,19 @@
           <li class='page-nav-item'>
             <a href='lenard.html'>
             <label>LENARD</label>
-            <img src='assets/images/lenard.jpeg' />
+            <img alt='lenard-petit' src='assets/images/lenard.jpeg' />
             </a>
           </li>
           <li class='page-nav-item'>
             <a href='faculty.html'>
             <label>FACULTY</label>
-            <img src='assets/images/faculty.jpeg' />
+            <img alt='faculty-woman-teacher' src='assets/images/faculty.jpeg' />
             </a>
           </li>
           <li class='page-nav-item'>
             <a href='friends.html'>
             <label>FRIENDS</label>
-            <img src='assets/images/friends.jpeg' />
+            <img alt='friends-actors' src='assets/images/friends.jpeg' />
             </a>
           </li>
         </nav>
