--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Michael Chekhov Acting Studio</title>
+    <meta name="title" content="Michael Chekhov Acting Studio | NYC">
+    <meta name="description" content="Michael Checkhov Acting Studio, directed
+      by Lenard Petit, offers trainings and workshops based
+      on Michael Chekhov Technique in New York City">
+    <meta name="author" content="Lenard Petit">
+    <meta property="og:title" content="Michael Chekhov Acting Studio | NYC">
+    <meta property="og:description" content="Michael Checkhov Acting Studio, directed
+      by Lenard Petit, offers trainings and workshops based
+      on Michael Chekhov Technique in New York City">
+    <title>Home - Michael Chekhov Acting Studio | NYC</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nothing+You+Could+Do" rel="stylesheet">
@@ -13,7 +22,7 @@
   <body>
     <header>
     	<a href='index.html'>
-    		<img class='logo' src='http://res.cloudinary.com/dn07p1frq/image/upload/c_scale,w_100/v1507927305/expansiveman_eqo6gt.png' />
+    		<img class='logo' alt='michael-chekhov-acting-studio-banner' src='http://res.cloudinary.com/dn07p1frq/image/upload/c_scale,w_100/v1507927305/expansiveman_eqo6gt.png' />
     	</a>
       <nav class='menu'>
         <group class='submenu-link' onclick="void(0)">
