--- a/philosophy.html
+++ b/philosophy.html
@@ -239,11 +239,12 @@
           <p>
             These books are carried by and can be ordered through our neighbors
             at the
-            <a href='https://www.google.com/maps/place/Rudolf+Steiner+Bookstore/@40.7386394,-74.0007572,16.09z/data=!4m5!3m4!1s0x89c259bd991dff93:0x13d411c212d67e74!8m2!3d40.7386751!4d-73.9980881'>
+            <a class='phil-book-link' href='https://www.google.com/maps/place/Rudolf+Steiner+Bookstore/@40.7386394,-74.0007572,16.09z/data=!4m5!3m4!1s0x89c259bd991dff93:0x13d411c212d67e74!8m2!3d40.7386751!4d-73.9980881'
+            target='_blank'>
               Rudolf Steiner Bookstore
             </a>
             or at NYC’s
-            <a href='http://www.dramabookshop.com/'>legendary Drama Book Shop</a>, make sure to
+            <a class='phil-book-link' href='http://www.dramabookshop.com/' target='_blank'>legendary Drama Book Shop</a>, make sure to
             call and see what they have in stock or can order.
           </p>
         </section>
