deleted word "legendary"

--- a/philosophy.html
+++ b/philosophy.html
@@ -237,7 +237,7 @@
               Rudolf Steiner Bookstore
             </a>
             or at NYC’s
-            <a class='phil-book-link' href='http://www.dramabookshop.com/' target='_blank'>legendary Drama Book Shop</a>, make sure to
+            <a class='phil-book-link' href='http://www.dramabookshop.com/' target='_blank'>Drama Book Shop</a>, make sure to
             call and see what they have in stock or can order.
           </p>
         </section>
