target='_blank' link updates

--- a/philosophy.html
+++ b/philosophy.html
@@ -255,11 +255,11 @@
         <div class='phil-video-section'>
           <iframe class='phil-video' height='100%' width='100%' src="https://player.vimeo.com/video/19313780" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
           <div class='phil-video-attribution'>
-            <a href="https://vimeo.com/ondemand/michamasterclasses">
+            <a href="https://vimeo.com/ondemand/michamasterclasses" target='_blank'>
               <img class='phil-video-attribution-image' alt='micha-michael-chekhov-association' src='assets/images/micha.jpg' />
             </a>
             <div class='phil-video-description'>
-              <a href="https://vimeo.com/ondemand/michamasterclasses">
+              <a href="https://vimeo.com/ondemand/michamasterclasses" target='_blank'>
                 Master Classes in the Michael Chekhov Technique by MICHA
               </a>
             </div>
