target='_blank' social media link update

--- a/contact.html
+++ b/contact.html
@@ -72,13 +72,13 @@
                 <a href=''>SUBSCRIBE</a> to our email list
               </span>
               <span>
-                <a href='https://www.facebook.com/chekhovstudionyc/'>
+                <a href='https://www.facebook.com/chekhovstudionyc/'target='_blank'>
                   FACEBOOK
                 </a> |
-                <a href='https://www.instagram.com/chekhovstudionyc/'>
+                <a href='https://www.instagram.com/chekhovstudionyc/'target='_blank'>
                   INSTAGRAM
                 </a> |
-                <a href='https://twitter.com/chekhovstudioNY'>
+                <a href='https://twitter.com/chekhovstudioNY'target='_blank'>
                   TWITTER
                 </a>
               </span>
