--- a/studio.html
+++ b/studio.html
@@ -49,7 +49,7 @@
             in a practical and imaginative way. His teaching and writings are celebrated
             for clearly translating the technique into something easy to use for actors today.
             His book, <a class='studio-link' target='_blank' href='http://www.dramabookshop.com/book/9780415496728'><em>The Michael Chekhov Handbook, For The Actor</em></a>
-            can be purchased online and at The Drama Book Shop.
+            can be found online and  select bookstores like the Drama Book Shop.
             Additionally a few <a class='studio-link' target='_blank' href='assets/articles.pdf'>articles</a>
             by Lenard are included here!
           </div>
