suggested reading update

--- a/philosophy.html
+++ b/philosophy.html
@@ -230,7 +230,7 @@
         <section class='page-section'>
           <h3 class='section-header'>SUGGESTED READING AND MEDIA</h3>
           <p>
-            These books are carried by and can be ordered through our neighbors
+            These books are found online and carried by / can be ordered through our neighbors
             at the
             <a class='phil-book-link' href='https://www.google.com/maps/place/Rudolf+Steiner+Bookstore/@40.7386394,-74.0007572,16.09z/data=!4m5!3m4!1s0x89c259bd991dff93:0x13d411c212d67e74!8m2!3d40.7386751!4d-73.9980881'
             target='_blank'>
