Remove address and NYC studio.html

--- a/studio.html
+++ b/studio.html
@@ -38,7 +38,7 @@
       <div class='page-body'>
         <h1 class='page-title'>STUDIO</h1>
         <h2 class='studio-greeting'>Welcome to the Michael Chekhov Acting
-          Studio in New York City, home to trainings and workshops based
+          Studio, home to trainings and workshops based
           on Michael Chekhov Technique and exploring the actor's work as
           play since 1996.</h2>
 
@@ -133,11 +133,6 @@
     <footer>
       <section class='footer-left'>
         <span>
-          <a href='https://www.google.com/maps/place/michael+chekhov+acting+studio/@40.7407823,-74.002077,14.61z/data=!4m5!3m4!1s0x89c259bd98ae6e09:0x77ac45e05794e54c!8m2!3d40.7386774!4d-73.9980879'>
-            138 W 15th St, 1st floor, NY, NY 10011
-          </a>
-        </span>
-        <span>
           <a href='http://michaelchekhovactingstudio.us10.list-manage1.com/subscribe?u=f86b311144f65c098b5d1ac47&id=f782f7b7a4'>
             Subscribe
           </a>to our email newsletter
@@ -147,10 +142,10 @@
         <a href='mailto:info@michaelchekhovactingstudio.com'>
           <img src="assets/images/email.png" />
         </a>
-        <a href='https://www.facebook.com/chekhovstudionyc/' target='_blank'>
+        <a href='https://www.facebook.com/chekhovstudiony/' target='_blank'>
           <img src="assets/images/facebook.png" />
         </a>
-        <a href='https://www.instagram.com/chekhovstudionyc/' target='_blank'>
+        <a href='https://www.instagram.com/chekhovstudiony/' target='_blank'>
           <img src="assets/images/instagram.png" />
         </a>
         <a href='https://twitter.com/chekhovstudioNY' target='_blank'>
