--- a/lenard.html
+++ b/lenard.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="title" content="Lenard Petit - Michael Chekhov Acting Studio | NYC">
-    <meta name="description" content="Learn more about Lenard Petit, director of Michael Checkhov Acting Studio in New York City">
+    <meta name="title" content="Lenard Petit - Michael Chekhov Acting Studio | NY">
+    <meta name="description" content="Learn more about Lenard Petit, director of Michael Checkhov Acting Studio in New York">
     <meta name="author" content="Lenard Petit">
-    <meta property="og:title" content="Lenard Petit - Michael Chekhov Acting Studio | NYC">
-    <meta property="og:description" content="Learn more about Lenard Petit, director of Michael Checkhov Acting Studio in New York City">
+    <meta property="og:title" content="Lenard Petit - Michael Chekhov Acting Studio | NY">
+    <meta property="og:description" content="Learn more about Lenard Petit, director of Michael Checkhov Acting Studio in New York">
     <title>Lenard Petit - Michael Chekhov Acting Studio | NYC</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
@@ -114,8 +114,8 @@
     <footer>
       <section class='footer-left'>
         <span>
-          <a href='https://www.google.com/maps/place/michael+chekhov+acting+studio/@40.7407823,-74.002077,14.61z/data=!4m5!3m4!1s0x89c259bd98ae6e09:0x77ac45e05794e54c!8m2!3d40.7386774!4d-73.9980879'>
-            138 W 15th St, 1st floor, NY, NY 10011
+          <a href='https://'>
+            
           </a>
         </span>
         <span>
